--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "type": "module",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   }
 }
