--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@aws-sdk/client-s3": "^3.670.0",
     "@aws-sdk/lib-storage": "^3.670.0",
     "@prisma/client": "^5.20.0",
+    "bcrypt": "^5.1.1",
     "cookies-next": "^4.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
