--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
     "@aws-sdk/lib-storage": "^3.670.0",
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
-    "cookies-next": "^4.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2",
+    "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.20.0",
     "superstruct": "^2.0.2"
