--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "set NODE_ENV=production && node app.js",
+    "dev": "set NODE_ENV=local && nodemon app.js"
   }
 }
