chore : add untracted files
http 폴더 내부 파일(테스트 파일) gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,7 @@ node_modules
 .history
 .ionide
 
+# Test code
+http/*
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,dotenv
