--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@google-cloud/storage": "^7.13.0",
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -15,6 +16,7 @@
     "is-uuid": "^1.0.2",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.20.0",
+    "redis": "^4.7.0",
     "superstruct": "^1.0.4"
   },
   "devDependencies": {
